--- a/pwa/package.json
+++ b/pwa/package.json
@@ -14,8 +14,16 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "lockr": "^0.8.4",
+    "qs": "^6.5.2",
+    "sass-loader": "^7.0.3",
+    "v-viewer": "^1.4.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-amap": "^0.5.8",
+    "vue-axios": "^2.1.3",
+    "vue-router": "^3.0.1",
+    "vue-socket.io": "^2.1.1-b"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
