--- a/myapp/package.json
+++ b/myapp/package.json
@@ -8,6 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "lockr": "^0.8.4",
+    "qs": "^6.5.2",
     "core-js": "^2.6.5",
     "push.js": "^1.0.12",
     "register-service-worker": "^1.6.2",
