--- a/uni-maika/package.json
+++ b/uni-maika/package.json
@@ -24,37 +24,38 @@
     "info": "node node_modules/@dcloudio/vue-cli-plugin-uni/commands/info.js"
   },
   "dependencies": {
-    "@dcloudio/uni-app-plus": "^2.0.0-24220191115006",
-    "@dcloudio/uni-h5": "^2.0.0-24220191115006",
-    "@dcloudio/uni-helper-json": "*",
-    "@dcloudio/uni-mp-alipay": "^2.0.0-24220191115006",
-    "@dcloudio/uni-mp-baidu": "^2.0.0-24220191115006",
-    "@dcloudio/uni-mp-qq": "^2.0.0-24220191115006",
-    "@dcloudio/uni-mp-toutiao": "^2.0.0-24220191115006",
-    "@dcloudio/uni-mp-weixin": "^2.0.0-24220191115006",
-    "@dcloudio/uni-stat": "^2.0.0-24220191115006",
+    "@dcloudio/uni-app-plus": "^2.0.0-25120200103006",
+    "@dcloudio/uni-h5": "^2.0.0-25120200103006",
+    "@dcloudio/uni-helper-json": "^1.0.5",
+    "@dcloudio/uni-mp-alipay": "^2.0.0-25120200103006",
+    "@dcloudio/uni-mp-baidu": "^2.0.0-25120200103006",
+    "@dcloudio/uni-mp-qq": "^2.0.0-25120200103006",
+    "@dcloudio/uni-mp-toutiao": "^2.0.0-25120200103006",
+    "@dcloudio/uni-mp-weixin": "^2.0.0-25120200103006",
+    "@dcloudio/uni-stat": "^2.0.0-25120200103006",
+    "crypto-js": "^3.1.9-1",
     "flyio": "^0.6.2",
     "regenerator-runtime": "^0.12.1",
-    "vue": "^2.6.10",
+    "vue": "^2.6.11",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
-    "@dcloudio/uni-cli-shared": "^2.0.0-24220191115006",
-    "@dcloudio/uni-template-compiler": "^2.0.0-24220191115006",
-    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-24220191115006",
-    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-24220191115006",
-    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-24220191115006",
-    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-24220191115006",
-    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-24220191115006",
+    "@dcloudio/uni-cli-shared": "^2.0.0-25120200103006",
+    "@dcloudio/uni-template-compiler": "^2.0.0-25120200103006",
+    "@dcloudio/vue-cli-plugin-hbuilderx": "^2.0.0-25120200103006",
+    "@dcloudio/vue-cli-plugin-uni": "^2.0.0-25120200103006",
+    "@dcloudio/vue-cli-plugin-uni-optimize": "^2.0.0-25120200103006",
+    "@dcloudio/webpack-uni-mp-loader": "^2.0.0-25120200103006",
+    "@dcloudio/webpack-uni-pages-loader": "^2.0.0-25120200103006",
     "@types/html5plus": "*",
     "@types/uni-app": "*",
     "@vue/cli-plugin-babel": "3.5.1",
-    "@vue/cli-service": "^4.1.0",
+    "@vue/cli-service": "^4.1.2",
     "babel-plugin-import": "^1.11.0",
     "mini-types": "*",
-    "miniprogram-api-typings": "^2.8.0-2",
+    "miniprogram-api-typings": "^2.10.0",
     "postcss-comment": "^2.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
     "Android >= 4",
