--- a/uni-maika/src/manifest.json
+++ b/uni-maika/src/manifest.json
@@ -59,7 +59,12 @@
         "setting" : {
             "urlCheck" : false
         },
-        "usingComponents" : true
+        "usingComponents" : true,
+				"permission": {
+					"scope.userLocation": {
+						"desc": "你的位置信息将用于小程序位置接口的展示"
+					}
+				}
     },
     "mp-alipay" : {
         "usingComponents" : true
